YAML/vibeapps-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: kubebuilder
  name: kubebuilder-webhook-service
  namespace: kubebuilder-system
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    app.kubernetes.io/name: kubebuilder
    control-plane: controller-manager

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: kubebuilder
    control-plane: controller-manager
  name: kubebuilder-controller-manager-metrics-service
  namespace: kubebuilder-system
spec:
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/name: kubebuilder
    control-plane: controller-manager
