YAML/vibeapps-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kubebuilder-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFekNDQWZ1Z0F3SUJBZ0lVWUFBVjdJNG1Cdzd1NmZDTXUvNDlaTlRFRDgwd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dURVhNQlVHQTFVRUF3d09ZMkV1WlhoaGJYQnNaUzVqYjIwd0hoY05Nall3TXpNeE1UUTFNelEzV2hjTgpNell3TXpJNE1UUTFNelEzV2pBWk1SY3dGUVlEVlFRRERBNWpZUzVsZUdGdGNHeGxMbU52YlRDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQU5DRFFKdWhBZGxkcFdjRUJFVWhNQTRkamdBd1FId00KZTdOcEc0K2lPOGkrczltVWh5b2ovSGpVYUdiOGZObWVPOWpvblZ1aEMzNTFGeWxKTTFITFE4eFpBYTVZWnh4UQozM3AwekkraW5q [...]
      service:
        name: kubebuilder-webhook-service
        namespace: kubebuilder-system
        path: /mutate-apps-example-com-v1alpha1-vibeapp
    failurePolicy: Fail
    name: mvibeapp-v1alpha1.kb.io
    rules:
      - apiGroups:
          - apps.example.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - vibeapps
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kubebuilder-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFekNDQWZ1Z0F3SUJBZ0lVWUFBVjdJNG1Cdzd1NmZDTXUvNDlaTlRFRDgwd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dURVhNQlVHQTFVRUF3d09ZMkV1WlhoaGJYQnNaUzVqYjIwd0hoY05Nall3TXpNeE1UUTFNelEzV2hjTgpNell3TXpJNE1UUTFNelEzV2pBWk1SY3dGUVlEVlFRRERBNWpZUzVsZUdGdGNHeGxMbU52YlRDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQU5DRFFKdWhBZGxkcFdjRUJFVWhNQTRkamdBd1FId00KZTdOcEc0K2lPOGkrczltVWh5b2ovSGpVYUdiOGZObWVPOWpvblZ1aEMzNTFGeWxKTTFITFE4eFpBYTVZWnh4UQozM3AwekkraW5q [...]
      service:
        name: kubebuilder-webhook-service
        namespace: kubebuilder-system
        path: /validate-apps-example-com-v1alpha1-vibeapp
    failurePolicy: Fail
    name: vvibeapp-v1alpha1.kb.io
    rules:
      - apiGroups:
          - apps.example.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - vibeapps
    sideEffects: None
